--- a/CONTROL
+++ b/CONTROL
@@ -1,9 +1,9 @@
-Package: qboros-electric-face-vision
-Source: qboros-electric-face-vision
+Package: qboros-electric-qbo-face-vision
+Source: qboros-electric-qbo-face-vision
 Version: 1.0-openqbo0
 Priority: standard
 Architecture: amd64
-Depends:
+Depends: qboros-electric-qbo-arduqbo, qboros-electric-qbo-listen, qboros-electric-qbo-talk
 Maintainer: Arturo Bajuelos <arturo@openqbo.org>
 Homepage: http://openqbo.org/wiki/doku.php?id=qbo_apps:ros_stack:qbo_face_vision
-Description: This stack contains three packages with implemenation of computer vision algorithm for face tracking, following and recognition.
+Description: This stack contains three packages with implementation of computer vision algorithm for face tracking, following and recognition.
